add material on latent features

--- a/recommender_systems.ipynb
+++ b/recommender_systems.ipynb
@@ -123,7 +123,7 @@
     "new_user_mag = 5\n",
     "\n",
     "numerators = np.array([new_user.dot(users[i]) for i in range(3)])\n",
-    "denominators = np.array([np.sqrt(sum(new_user**2)) * np.sqrt(sum(users[i]**2)) for i in range(3)])\n",
+    "denominators = np.array([new_user_mag * np.sqrt(sum(users[i]**2)) for i in range(3)])\n",
     "\n",
     "numerators / denominators"
    ]
@@ -166,9 +166,9 @@
     "\n",
     "Suppose we start with a matrix $R$ of users and products, where each cell records the ranking the relevant user gave to the relevant product. Very often we'll be able to record this data as a sparse matrix, because many users will not have ranked many items.\n",
     "\n",
-    "Imagine factoring this matrix into a user matrix and an item matrix: $R = PQ^T$. Then we could predict a user's ranking of a particular item simply by calculating $p^Tq$, the dot-product of a row of $P$ and a column of $Q^T$. Why? The user vector records the user's preferences with respect to certain latent features, while the item vector records how the item ranks with respect to those same latent features.\n",
+    "Imagine factoring this matrix into a user matrix $P$ and an item matrix $Q^T$: $R = PQ^T$. What would the shapes of $P$ and $Q^T$ be? Clearly $P$ must have as many rows as $R$, which is just the number of users who have given ratings. Similarly, $Q^T$ must have as many columns as $R$, which is just the number of items that have received ratings. We also know that the number of columns of $P$ must match the number of rows of $Q^T$ for the factorization to be possible, but this number could really be anything. In practice this will be a small number, and for reasons that will emerge shortly let's refer to these dimensions as **latent features** of the items in $R$. If $p$ is a row of $P$, i.e. a user-vector, and $q$ is a column of $Q^T$, i.e. an item-vector, then $p$ will record the user's particular weights or *preferences* with respect to the latent features, while $q$ will record how the item ranks with respect to those same latent features. This in turn means that we could predict a user's ranking of a particular item simply by calculating the dot-product of $p$ and $q$! \n",
     "\n",
-    "If we could effect such a factorization, then we could calculate *all* predictions, i.e. fill in the gaps in $R$, by solving for P and Q.\n",
+    "If we could effect such a factorization, $R = PQ^T$, then we could calculate *all* predictions, i.e. fill in the gaps in $R$, by solving for P and Q.\n",
     "\n",
     "The isolation of these latent features can be achieved in various ways. But this is at heart a matter of **dimensionality reduction**, and so one way is with the [SVD](https://hackernoon.com/introduction-to-recommender-system-part-1-collaborative-filtering-singular-value-decomposition-44c9659c5e75).\n",
     "\n",
