--- a/svd.ipynb
+++ b/svd.ipynb
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%timeit v_T.T.dot(np.linalg.pinv(sigma)).dot(u.T).dot(b)"
+    "%timeit vT.T.dot(np.linalg.pinv(sigma)).dot(u.T).dot(b)"
    ]
   },
   {
