make small style changes

--- a/recommender_systems.ipynb
+++ b/recommender_systems.ipynb
@@ -66,7 +66,8 @@
    "outputs": [],
    "source": [
     "numerators = np.array([tv_shows[0].dot(tv_shows[i]) for i in range(1, 4)])\n",
-    "denominators = np.array([np.sqrt(sum(tv_shows[0]**2)) * np.sqrt(sum(tv_shows[i]**2)) for i in range(1, 4)])\n",
+    "denominators = np.array([np.sqrt(sum(tv_shows[0]**2)) *\\\n",
+    "                         np.sqrt(sum(tv_shows[i]**2)) for i in range(1, 4)])\n",
     "\n",
     "numerators / denominators"
    ]
@@ -123,7 +124,8 @@
     "new_user_mag = 5\n",
     "\n",
     "numerators = np.array([new_user.dot(users[i]) for i in range(3)])\n",
-    "denominators = np.array([new_user_mag * np.sqrt(sum(users[i]**2)) for i in range(3)])\n",
+    "denominators = np.array([new_user_mag * np.sqrt(sum(users[i]**2))\\\n",
+    "                         for i in range(3)])\n",
     "\n",
     "numerators / denominators"
    ]
@@ -168,7 +170,7 @@
     "\n",
     "Imagine factoring this matrix into a user matrix $P$ and an item matrix $Q^T$: $R = PQ^T$. What would the shapes of $P$ and $Q^T$ be? Clearly $P$ must have as many rows as $R$, which is just the number of users who have given ratings. Similarly, $Q^T$ must have as many columns as $R$, which is just the number of items that have received ratings. We also know that the number of columns of $P$ must match the number of rows of $Q^T$ for the factorization to be possible, but this number could really be anything. In practice this will be a small number, and for reasons that will emerge shortly let's refer to these dimensions as **latent features** of the items in $R$. If $p$ is a row of $P$, i.e. a user-vector, and $q$ is a column of $Q^T$, i.e. an item-vector, then $p$ will record the user's particular weights or *preferences* with respect to the latent features, while $q$ will record how the item ranks with respect to those same latent features. This in turn means that we could predict a user's ranking of a particular item simply by calculating the dot-product of $p$ and $q$! \n",
     "\n",
-    "If we could effect such a factorization, $R = PQ^T$, then we could calculate *all* predictions, i.e. fill in the gaps in $R$, by solving for P and Q.\n",
+    "If we could effect such a factorization, $R = PQ^T$, then we could calculate *all* predictions, i.e. fill in the gaps in $R$, by solving for $P$ and $Q$.\n",
     "\n",
     "The isolation of these latent features can be achieved in various ways. But this is at heart a matter of **dimensionality reduction**, and so one way is with the [SVD](https://hackernoon.com/introduction-to-recommender-system-part-1-collaborative-filtering-singular-value-decomposition-44c9659c5e75).\n",
     "\n",
@@ -185,7 +187,7 @@
     "\n",
     "We're looking for two matrices (a user matrix and an item matrix) into which we can factor our ratings matrix. We can't of course solve for two matrices at once. But here's what we can do:\n",
     "\n",
-    "Make guesses of the values for P and Q. Then hold the values of one *constant* so that we can optimize for the values of the other!\n",
+    "Make guesses of the values for $P$ and $Q$. Then hold the values of one *constant* so that we can optimize for the values of the other!\n",
     "\n",
     "Basically this converts our problem into a familiar *least-squares* problem. See [this page](https://textbooks.math.gatech.edu/ila/least-squares.html) and [this page](https://datasciencemadesimpler.wordpress.com/tag/alternating-least-squares/) for more details, but here's the basic idea:"
    ]
@@ -255,7 +257,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings_arr = pd.DataFrame([[0, 1, 0, 0, 4], [0, 0, 0, 5, 0]], index=['brian', 'erin'],\n",
+    "ratings_arr = pd.DataFrame([[0, 1, 0, 0, 4], [0, 0, 0, 5, 0]],\\\n",
+    "                           index=['brian', 'erin'],\n",
     "             columns=['film' + str(i) for i in range(1, 6)])\n",
     "ratings_arr"
    ]
@@ -283,6 +286,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "users_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "seed(100)\n",
     "items = []\n",
     "\n",
@@ -292,6 +304,15 @@
     "        item.append(gs(0, 1))\n",
     "    items.append(item)\n",
     "items_arr = np.array(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items_arr"
    ]
   },
   {
