--- a/svd.ipynb
+++ b/svd.ipynb
@@ -212,6 +212,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "u.dot(sigma).dot(vT)"
    ]
   },
