--- a/svd.ipynb
+++ b/svd.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -221,6 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This should reproduce the matrix A\n",
     "u.dot(sigma).dot(vT)"
    ]
   },
@@ -322,6 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reproducing the vector b\n",
     "M.dot(x)"
    ]
   },
@@ -396,8 +399,6 @@
    "source": [
     "# Checking against sklearn's LinearRegression():\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
     "LinearRegression(fit_intercept=False).fit(A, b).coef_"
    ]
   },
@@ -446,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For our small sample matrix, sklearn's version actually takes longer. But let's try a much larger matrix!"
+    "For our small sample matrix, `sklearn`'s version actually takes longer. But let's try a much larger matrix!"
    ]
   },
   {
@@ -482,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Going through the SVD (as sklearn's model-fitting procedure does) makes noticeable savings in time here."
+    "Going through the SVD (as `sklearn`'s model-fitting procedure does) makes noticeable savings in time here."
    ]
   },
   {
