--- a/recommender_systems.ipynb
+++ b/recommender_systems.ipynb
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This lines up with the ratings with we began."
+    "This lines up with the ratings with which we began."
    ]
   },
   {
