add dataata and svd material

--- a/recommender_systems.ipynb
+++ b/recommender_systems.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import gauss as gs, uniform as uni, seed\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import surprise"
    ]
   },
   {
@@ -194,7 +195,7 @@
    "source": [
     "### Alternating Least-Squares (ALS)\n",
     "\n",
-    "ALS recommendation systems are often implemented in Spark architectures because of the appropriateness for distributed computing. ALS systems often involve very large datasets (consider how much data the recommendation engine for NETFLIX must have, for example!), and it is often useful to store them as sparse matrices, which Spark's ML library can handle. In fact, Spark's mllib even includes a \"Rating\" datatype! ALS is **collaborative** and **model-based**.\n",
+    "ALS recommendation systems are often implemented in Spark architectures because of the appropriateness for distributed computing. ALS systems often involve very large datasets (consider how much data the recommendation engine for NETFLIX must have, for example!), and it is often useful to store them as sparse matrices, which Spark's ML library can handle. In fact, Spark's mllib even includes a \"Rating\" datatype! ALS is **collaborative** and **model-based**, and is especially useful for working with *implicit* ratings.\n",
     "\n",
     "We're looking for two matrices (a user matrix and an item matrix) into which we can factor our ratings matrix. We can't of course solve for two matrices at once. But here's what we can do:\n",
     "\n",
@@ -508,7 +509,8 @@
     "        chance = gs(0, 0.4)\n",
     "        \n",
     "        # We'll fill our ratings matrix mostly with 0's to represent\n",
-    "        # unrated films\n",
+    "        # unrated films. This is NOT standard; we're doing this only\n",
+    "        # to illustrate the general algorithm.\n",
     "        if chance > 0.5:\n",
     "            user.append(int(uni(1, 6)))\n",
     "        else:\n",
