add last message

--- a/svd.ipynb
+++ b/svd.ipynb
@@ -760,6 +760,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**On your own time: Explore `surprise` further!**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
