move wip to local branch

--- a/svd.ipynb
+++ b/svd.ipynb
@@ -495,275 +495,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SVD in Rec Systems\n",
+    "## Further Resources\n",
     "\n",
-    "Since the SVD solves the least-squares problem, it can be used in ALS-style recommenders. But whereas ALS is generally used for implicit ratings, the SVD is more useful for explicit ratings, such as exist in the [MovieLens](https://grouplens.org/datasets/movielens/) datset.\n",
-    "\n",
-    "Much of the following code comes from [this](https://analyticsindiamag.com/singular-value-decomposition-svd-application-recommender-system/) helpful article."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv('data/ratings.dat',\n",
-    "                   names=['user_id', 'movie_id', 'rating', 'time'],\n",
-    "                   engine='python', delimiter='::')\n",
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "data.groupby('user_id').count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.groupby('movie_id').count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movies = pd.read_csv('data/movies.dat',\n",
-    "                     names=['movie_id', 'title', 'genre'],\n",
-    "                    engine='python', delimiter='::')\n",
-    "movies.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movies.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "users = pd.read_csv('data/users.dat',\n",
-    "                    names=['user_id', 'gender', 'age',\n",
-    "                          'occupation', 'ZIP code'],\n",
-    "                   engine='python', delimiter='::')\n",
-    "users.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "users.tail()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check the documentation for how the `age` and `occupation` columns are coded."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating the rating matrix (rows as movies, columns as users)\n",
-    "\n",
-    "ratings_mat = np.ndarray(\n",
-    "    shape=(np.max(data['movie_id']), np.max(data['user_id'])),\n",
-    "    dtype=np.uint8)\n",
-    "ratings_mat[data['movie_id']-1, data['user_id']-1] = data['rating']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['movie_id'][0], data['user_id'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings_mat[1192, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings_mat[1096, 6039]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Normalizing the matrix (subtract mean movie rating off)\n",
-    "\n",
-    "normalized_mat = ratings_mat - np.asarray([(np.mean(ratings_mat, axis=1))]).T"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For more on this type of \"normalization\" see [this post](https://stats.stackexchange.com/questions/31096/how-do-i-use-the-svd-in-collaborative-filtering) and [this article](http://nicolas-hug.com/blog/matrix_facto_3)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Computing the Singular Value Decomposition (SVD)\n",
-    "\n",
-    "A = normalized_mat.T / np.sqrt(ratings_mat.shape[0] - 1)\n",
-    "U, S, V = np.linalg.svd(A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def top_cosine_similarity(data, movie_id, top_n=10):\n",
-    "    \"\"\"This function calculates cosine similarity and returns the\n",
-    "    top n highest scores for user-defined n.\"\"\"\n",
-    "    index = movie_id - 1 # Movie id starts from 1 in the dataset\n",
-    "    movie_row = data[index, :]\n",
-    "    \n",
-    "    # This is just a shortcut for calculating vector norms:\n",
-    "    magnitude = np.sqrt(np.einsum('ij, ij -> i', data, data))\n",
-    "    similarity = np.dot(movie_row, data.T) / (magnitude[index] * magnitude)\n",
-    "    sort_indices = np.argsort(-similarity)\n",
-    "    return sort_indices[:top_n]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_similar_movies(movie_data, movie_id, top_indices):\n",
-    "    \"\"\"This function prints out the movies corresponding to\n",
-    "    a set of indices\"\"\"\n",
-    "    print(f\"\"\"Recommendations for\n",
-    "    {movie_data[movie_data['movie_id'] == movie_id]['title'][0]}: \\n\"\"\")\n",
-    "    for id in top_indices + 1:\n",
-    "        print(movie_data[movie_data.movie_id == id].title.values[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# k-principal components to represent movies,\n",
-    "# movie_id to find recommendations, top_n print n results      \n",
-    "\n",
-    "k = 50\n",
-    "movie_id = 1 # (getting an id from movies.dat)\n",
-    "top_n = 10\n",
-    "sliced = V.T[:, :k] # representative data\n",
-    "indices = top_cosine_similarity(sliced, movie_id, top_n)\n",
-    "\n",
-    "# Printing the top N similar movies\n",
-    "print_similar_movies(movie_data, movie_id, indices)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## The `surprise` package\n",
-    "`pip install surprise`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This code taken from https://surprise.readthedocs.io/en/stable/\n",
-    "\n",
-    "# Load the movielens-100k dataset (download it if needed),\n",
-    "data = Dataset.load_builtin('ml-100k')\n",
-    "\n",
-    "# sample random trainset and testset\n",
-    "# test set is made of 25% of the ratings.\n",
-    "trainset, testset = train_test_split(data, test_size=.25)\n",
-    "\n",
-    "# We'll use the famous SVD algorithm.\n",
-    "algo = SVD()\n",
-    "\n",
-    "# Train the algorithm on the trainset, and predict ratings for the testset\n",
-    "algo.fit(trainset)\n",
-    "predictions = algo.test(testset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions[:10]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**On your own time: Explore `surprise` further!**"
+    "- The [MovieLens](https://grouplens.org/datasets/movielens/) datset(s).\n",
+    "- [This article](https://analyticsindiamag.com/singular-value-decomposition-svd-application-recommender-system/) that illustrates the SVD in a recommender system.\n",
+    "- The [`surprise`](https://surprise.readthedocs.io/en/stable/) library, which you'll see in the Learn labs."
    ]
   },
   {
