remove surprise import

--- a/recommender_systems.ipynb
+++ b/recommender_systems.ipynb
@@ -9,14 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import gauss as gs, uniform as uni, seed\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import surprise"
+    "import pandas as pd"
    ]
   },
   {
