lecture work through

--- a/svd.ipynb
+++ b/svd.ipynb
@@ -9,16 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from surprise import SVD\n",
-    "from surprise import Dataset\n",
-    "from surprise.model_selection import train_test_split"
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -163,9 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.37454012, 0.95071431, 0.73199394],\n",
+       "       [0.59865848, 0.15601864, 0.15599452],\n",
+       "       [0.05808361, 0.86617615, 0.60111501],\n",
+       "       [0.70807258, 0.02058449, 0.96990985],\n",
+       "       [0.83244264, 0.21233911, 0.18182497]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.seed(42)\n",
     "A = np.random.rand(5, 3)\n",
@@ -174,9 +186,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.5991048 , -0.38620771, -0.12988737, -0.68883081, -0.02363108],\n",
+       "        [-0.25170251,  0.32375656, -0.38389036,  0.13776803, -0.81576694],\n",
+       "        [-0.4495347 , -0.55516825,  0.01152904,  0.69900869,  0.03099514],\n",
+       "        [-0.51180949,  0.4814656 ,  0.71001691,  0.04057048,  0.0217244 ],\n",
+       "        [-0.33717783,  0.45387706, -0.57576083,  0.12756552,  0.57665694]]),\n",
+       " array([1.99063285, 1.0096001 , 0.57767497]),\n",
+       " array([[-0.52458829, -0.54271957, -0.65594405],\n",
+       "        [ 0.72866708, -0.6846751 , -0.01625695],\n",
+       "        [-0.44028559, -0.48649304,  0.75463443]]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using np.linalg.svd()\n",
     "\n",
@@ -194,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,18 +243,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.99063285, 0.        , 0.        ],\n",
+       "       [0.        , 1.0096001 , 0.        ],\n",
+       "       [0.        , 0.        , 0.57767497],\n",
+       "       [0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        ]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sigma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.37454012, 0.95071431, 0.73199394],\n",
+       "       [0.59865848, 0.15601864, 0.15599452],\n",
+       "       [0.05808361, 0.86617615, 0.60111501],\n",
+       "       [0.70807258, 0.02058449, 0.96990985],\n",
+       "       [0.83244264, 0.21233911, 0.18182497]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This should reproduce the matrix A\n",
     "\n",
@@ -239,9 +300,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 3.96261914e+00,  1.01929237e+00,  3.33708373e-01, -2.38508905e-17,\n",
+       "        -1.61369887e-16]),\n",
+       " array([[-0.5991048 , -0.38620771,  0.12988737,  0.04484561,  0.45000891],\n",
+       "        [-0.25170251,  0.32375656,  0.38389036, -0.82541206, -0.69274127],\n",
+       "        [-0.4495347 , -0.55516825, -0.01152904, -0.03852797, -0.45150488],\n",
+       "        [-0.51180949,  0.4814656 , -0.71001691,  0.01759091, -0.01156803],\n",
+       "        [-0.33717783,  0.45387706,  0.57576083,  0.56115056,  0.33706236]]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linalg.eig(A.dot(A.T))"
    ]
@@ -255,9 +333,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.96261914e+00,  1.01929237e+00,  3.33708373e-01, -2.38508905e-17,\n",
+       "       -1.61369887e-16])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linalg.eig(A.dot(A.T))[0]"
    ]
@@ -271,9 +361,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.96261914, 1.01929237, 0.33370837])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linalg.svd(A)[1]**2"
    ]
@@ -295,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,16 +407,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.66972465],\n",
+       "       [0.08250005],\n",
+       "       [0.89709858],\n",
+       "       [0.2980035 ],\n",
+       "       [0.26230482]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,9 +440,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.66972465],\n",
+       "       [0.08250005],\n",
+       "       [0.89709858],\n",
+       "       [0.2980035 ],\n",
+       "       [0.26230482]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Reproducing the vector b\n",
     "\n",
@@ -346,9 +477,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pred1</th>\n",
+       "      <th>pred2</th>\n",
+       "      <th>pred3</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.374540</td>\n",
+       "      <td>0.950714</td>\n",
+       "      <td>0.731994</td>\n",
+       "      <td>0.669725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.598658</td>\n",
+       "      <td>0.156019</td>\n",
+       "      <td>0.155995</td>\n",
+       "      <td>0.082500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.058084</td>\n",
+       "      <td>0.866176</td>\n",
+       "      <td>0.601115</td>\n",
+       "      <td>0.897099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.708073</td>\n",
+       "      <td>0.020584</td>\n",
+       "      <td>0.969910</td>\n",
+       "      <td>0.298004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.832443</td>\n",
+       "      <td>0.212339</td>\n",
+       "      <td>0.181825</td>\n",
+       "      <td>0.262305</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      pred1     pred2     pred3    target\n",
+       "0  0.374540  0.950714  0.731994  0.669725\n",
+       "1  0.598658  0.156019  0.155995  0.082500\n",
+       "2  0.058084  0.866176  0.601115  0.897099\n",
+       "3  0.708073  0.020584  0.969910  0.298004\n",
+       "4  0.832443  0.212339  0.181825  0.262305"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame(np.hstack([A, b]),\n",
     "             columns=['pred1', 'pred2', 'pred3', 'target'])"
@@ -363,9 +575,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mat = np.random.rand(100, 100)\n",
     "np.allclose(np.linalg.inv(mat), np.linalg.pinv(mat))"
@@ -387,9 +610,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.01999533],\n",
+       "       [ 0.64792212],\n",
+       "       [ 0.29648717]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's calculate the least-squares solution using our SVD components:\n",
     "\n",
@@ -398,9 +634,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.01999533,  0.64792212,  0.29648717]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Checking against sklearn's LinearRegression():\n",
     "\n",
@@ -423,27 +670,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71.3 µs ± 1.98 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit vT.T.dot(np.linalg.pinv(sigma)).dot(u.T).dot(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "351 µs ± 7.95 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit LinearRegression(fit_intercept=False).fit(A, b).coef_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73.4 µs ± 1.12 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit np.linalg.pinv(A).dot(b)"
    ]
@@ -457,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,18 +739,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.9 ms ± 2.62 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit np.linalg.pinv(X).dot(target)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 ms ± 1.33 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit LinearRegression(fit_intercept=False).fit(X, target).coef_"
    ]
@@ -526,9 +813,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
